basic shell complete

--- a/1-user-info/user-info.html
+++ b/1-user-info/user-info.html
@@ -15,43 +15,43 @@
 <body>
     <header>
         <h1>Create Account</h1>
-            <p>Please fill in your name and choose your pack</p>
+        <p>Please fill in your name and choose your pack</p>
     </header>
     <main>
-       <section>
-            
-       </section>
-       <section>
+        <section>
+
+        </section>
+        <section>
             <div>
                 <label>
                     <input class="pack-div" type="radio" name="back-pack" value="red">
-                    <img src="http://www.placekitten.com/200/200">
+                    <img src="../assets/blue.png">
                 </label>
                 <label>
                     <input class="pack-div" type="radio" name="back-pack" value="yellow">
-                    <img src="http://www.placekitten.com/200/200">
+                    <img src="../assets/green.png">
                 </label>
                 <label>
                     <input class="pack-div" type="radio" name="back-pack" value="blue">
-                    <img src="http://www.placekitten.com/200/200">
+                    <img src="../assets/pink.png">
                 </label>
                 <label>
                     <input class="pack-div" type="radio" name="back-pack" value="green">
-                    <img src="http://www.placekitten.com/200/200">
+                    <img src="../assets/yellow.png">
                 </label>
             </div>
             <div id="user-info-div">
                 <form id="user-info">
                     <label>
                         Name
-                        <input type="text" name="user-name"/>
+                        <input type="text" name="user-name" />
                     </label>
                     <button>Submit</button>
 
                 </form>
             </div>
 
-       </section>
+        </section>
     </main>
     <footer>
         <div class="copy gutter-right">&copy; 2020 Alchemy Code Lab</div>
