user form input to localStorage

--- a/1-user-info/user-info.html
+++ b/1-user-info/user-info.html
@@ -22,34 +22,33 @@
 
         </section>
         <section>
-            <div>
+            <form id="user-info">
                 <label>
+                    Red
                     <input class="pack-div" type="radio" name="back-pack" value="red">
+                    <img src="../assets/red.png">
+                </label>
+                <label>
+                    Yellow
+                    <input class="pack-div" type="radio" name="back-pack" value="yellow">
+                    <img src="../assets/yellow.png">
+                </label>
+                <label>
+                    Blue
+                    <input class="pack-div" type="radio" name="back-pack" value="blue">
                     <img src="../assets/blue.png">
                 </label>
                 <label>
-                    <input class="pack-div" type="radio" name="back-pack" value="yellow">
+                    Green
+                    <input class="pack-div" type="radio" name="back-pack" value="green">
                     <img src="../assets/green.png">
                 </label>
                 <label>
-                    <input class="pack-div" type="radio" name="back-pack" value="blue">
-                    <img src="../assets/pink.png">
+                    Name
+                    <input type="text" name="user-name" />
                 </label>
-                <label>
-                    <input class="pack-div" type="radio" name="back-pack" value="green">
-                    <img src="../assets/yellow.png">
-                </label>
-            </div>
-            <div id="user-info-div">
-                <form id="user-info">
-                    <label>
-                        Name
-                        <input type="text" name="user-name" />
-                    </label>
-                    <button>Submit</button>
-
-                </form>
-            </div>
+                <button>Submit</button>
+            </form>
 
         </section>
     </main>
