--- a/2-choose-adventure/adventures.html
+++ b/2-choose-adventure/adventures.html
@@ -22,28 +22,28 @@
         <a href="">About Us</a>
     </nav>
     <main>
-        <section>
+        <!-- <section>
             <label>
-                <input type="radio" value="adventure-1" name="adventure-choice" class="pack-div">
+                <input type="radio" value="adventure1" name="adventure-choice" class="pack-div">
                 <img src="http://www.placekitten.com/200/200">
             </label>
             <label>
-                <input type="radio" value="adventure-2" name="adventure-choice" class="pack-div">
+                <input type="radio" value="adventure2" name="adventure-choice" class="pack-div">
                 <img src="http://www.placekitten.com/200/200">
             </label>
             <label>
-                <input type="radio" value="adventure-3" name="adventure-choice" class="pack-div">
+                <input type="radio" value="adventure3" name="adventure-choice" class="pack-div">
                 <img src="http://www.placekitten.com/200/200">
             </label>
             <label>
-                <input type="radio" value="adventure-4" name="adventure-choice" class="pack-div">
+                <input type="radio" value="adventure4" name="adventure-choice" class="pack-div">
                 <img src="http://www.placekitten.com/200/200">
             </label>
             <label>
-                <input type="radio" value="adventure-5" name="adventure-choice" class="pack-div">
+                <input type="radio" value="adventure5" name="adventure-choice" class="pack-div">
                 <img src="http://www.placekitten.com/200/200">
             </label>
-        </section>
+        </section> -->
 
     </main>
 
