fixed anchor links

--- a/2-choose-adventure/adventures.html
+++ b/2-choose-adventure/adventures.html
@@ -22,6 +22,8 @@
         <a href="">About Us</a>
     </nav>
     <main>
+        <button>LETS PLAY</button>
+        <section></section>
         <!-- <section>
             <label>
                 <input type="radio" value="adventure1" name="adventure-choice" class="pack-div">
