--- a/1-user-info/user-info.html
+++ b/1-user-info/user-info.html
@@ -28,27 +28,31 @@
         </section>
         <section>
             <form id="user-info">
-                <label>
-                    <input class="pack-div" type="radio" name="back-pack" value="red">
-                    <img src="../assets/red.png">
-                </label>
-                <label>
-                    <input class="pack-div" type="radio" name="back-pack" value="yellow">
-                    <img src="../assets/yellow.png">
-                </label>
-                <label>
-                    <input class="pack-div" type="radio" name="back-pack" value="blue">
-                    <img src="../assets/blue.png">
-                </label>
-                <label>
-                    <input class="pack-div" type="radio" name="back-pack" value="green">
-                    <img src="../assets/green.png">
-                </label>
-                <label id="user-label">
-                    Name
-                    <input type="text" name="user-name" />
-                </label>
-                <button>Submit</button>
+                <div class="user-info-divs">
+                    <label>
+                        <input class="pack-div" type="radio" name="back-pack" value="red">
+                        <img src="../assets/red.png">
+                    </label>
+                    <label>
+                        <input class="pack-div" type="radio" name="back-pack" value="yellow">
+                        <img src="../assets/yellow.png">
+                    </label>
+                    <label>
+                        <input class="pack-div" type="radio" name="back-pack" value="blue">
+                        <img src="../assets/blue.png">
+                    </label>
+                    <label>
+                        <input class="pack-div" type="radio" name="back-pack" value="green">
+                        <img src="../assets/green.png">
+                    </label>
+                </div>
+                <div class="user-info-divs">
+                    <label id="user-label">
+                        Name
+                        <input type="text" name="user-name" />
+                    </label>
+                    <button>Submit</button>
+                </div>
             </form>
 
         </section>
