added styles to adventure journals and page

--- a/2-choose-adventure/adventures.html
+++ b/2-choose-adventure/adventures.html
@@ -9,6 +9,12 @@
     <link rel="stylesheet" href="../styles/reset.css">
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/home.css">
+    <link rel="stylesheet" href="./adventures.css">
+
+    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&family=Rowdies:wght@700&display=swap"
+        rel="stylesheet">
+
     <title>Choose Adventure</title>
 </head>
 
@@ -22,7 +28,7 @@
         <a href="">About Us</a>
     </nav>
     <main>
-       
+
 
     </main>
 
