--- a/2-choose-adventure/index.html
+++ b/2-choose-adventure/index.html
@@ -22,9 +22,9 @@
     <header>
         <h1>Choose an Adventure!</h1>
     </header>
-    <nav><a href="../1-user-info/user-info.html">Home</a>
-        <a href="../3-game-page/game-page.html">Adventure</a>
-        <a href="../5-certificate-page/certificate.html">Results</a>
+    <nav><a href="../1-user-info/index.html">Home</a>
+        <a href="../3-game-page/index.html">Adventure</a>
+        <a href="../5-certificate-page/index.html">Results</a>
         <a href="">About Us</a>
     </nav>
     <main>
