center and aligned margins to main page

--- a/2-choose-adventure/index.html
+++ b/2-choose-adventure/index.html
@@ -23,9 +23,8 @@
         <h1>Choose an Adventure!</h1>
     </header>
     <nav><a href="../1-user-info/index.html">Home</a>
-        <a href="../3-game-page/index.html">Adventure</a>
         <a href="../5-certificate-page/index.html">Results</a>
-        <a href="">About Us</a>
+        <a href="../6-about-us/index.html">About Us</a>
     </nav>
     <main>
 
