--- a/4-backpack-page/index.html
+++ b/4-backpack-page/index.html
@@ -9,7 +9,11 @@
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/home.css">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&family=Rowdies:wght@700&display=swap"
+        rel="stylesheet">
+
+    <title>Backpack</title>
 </head>
 
 <body>
