--- a/5-certificate-page/index.html
+++ b/5-certificate-page/index.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="../styles/reset.css">
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/home.css">
+
+    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&family=Rowdies:wght@700&display=swap"
+        rel="stylesheet">
+
     <title>Certificate Page</title>
 </head>
 
