background image centered, styled letter tiles, and styled button

--- a/3-game-page/index.html
+++ b/3-game-page/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&family=Rowdies:wght@700&display=swap"
         rel="stylesheet">
-        
+
     <title>Game</title>
 </head>
 
@@ -24,7 +24,7 @@
     <main>
         <section id="background-section">
             <div id="game-prompt">
-                <p>Find this letter!</p>
+                <p id="find-letter-prompt">Find this letter!</p>
                 <button id="back-button">Back</button>
             </div>
         </section>
