--- a/6-about-us/index.html
+++ b/6-about-us/index.html
@@ -9,10 +9,9 @@
     <link rel="stylesheet" href="../styles/reset.css">
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/home.css">
+    <link rel="stylesheet" href="./about-us.css">
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&family=Rowdies:wght@700&display=swap"
-        rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&family=Rowdies:wght@700&display=swap" rel="stylesheet">
     <title>About Us</title>
 </head>
 
@@ -20,26 +19,43 @@
     <header>
         About Us
     </header>
+    <nav>
+        <a href="../1-user-info/index.html">Home</a>
+        <a href="../5-certificate-page/index.html">Results</a>
+        <a href="../6-about-us/index.html">About Us</a>
+    </nav>
     <main>
-        <section>
-            <img src="http://www.placekitten.com/200/200">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius earum sapiente adipisci et sequi pariatur
-                aliquid aliquam a vel. Assumenda consequuntur ab illo nemo sequi esse obcaecati. Hic, nam numquam.</p>
+        <section id="heather">
+            <img src="../assets/data-letters/H.png">
+            <div>
+                <p>Name: Heather </p>
+                <p>Favorite Color: Turquoise </p>
+                <p>Favorite Letter: L</p>
+            </div>
         </section>
-        <section>
-            <img src="http://www.placekitten.com/200/200">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius earum sapiente adipisci et sequi pariatur
-                aliquid aliquam a vel. Assumenda consequuntur ab illo nemo sequi esse obcaecati. Hic, nam numquam.</p>
+        <section id="katie">
+            <img src="../assets/data-letters/K.png">
+            <div>
+                <p>Name: Katie </p>
+                <p>Favorite Color: Red </p>
+                <p>Favorite Letter: K</p>
+            </div>
         </section>
-        <section>
-            <img src="http://www.fillmurray.com/200/200">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius earum sapiente adipisci et sequi pariatur
-                aliquid aliquam a vel. Assumenda consequuntur ab illo nemo sequi esse obcaecati. Hic, nam numquam.</p>
+        <section id="edgar">
+            <img src="../assets/data-letters/E.png">
+            <div>
+                <p>Name: Edgar </p>
+                <p>Favorite Color: Green </p>
+                <p>Favorite Letter: E</p>
+            </div>
         </section>
-        <section>
-            <img src="http://www.placecage.com/200/200">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius earum sapiente adipisci et sequi pariatur
-                aliquid aliquam a vel. Assumenda consequuntur ab illo nemo sequi esse obcaecati. Hic, nam numquam.</p>
+        <section id="brian">
+            <img src="../assets/data-letters/B.png">
+            <div>
+                <p>Name: Brian </p>
+                <p>Favorite Color: Blue </p>
+                <p>Favorite Letter: B</p>
+            </div>
         </section>
     </main>
 
