--- a/2-choose-adventure/index.html
+++ b/2-choose-adventure/index.html
@@ -22,7 +22,8 @@
     <header>
         <h1>Choose an Adventure!</h1>
     </header>
-    <nav><a href="../1-user-info/index.html">Home</a>
+    <nav>
+        <a href="../1-user-info/index.html">Home</a>
         <a href="../5-certificate-page/index.html">Results</a>
         <a href="../6-about-us/index.html">About Us</a>
     </nav>
