add basic certificate page styles

--- a/5-certificate-page/index.html
+++ b/5-certificate-page/index.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="../styles/reset.css">
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/home.css">
+    <link rel="stylesheet" href="./certificate-page.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&family=Rowdies:wght@700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&family=Rowdies:wght@700&display=swap" rel="stylesheet">
 
     <title>Certificate Page</title>
 </head>
@@ -22,11 +22,11 @@
         My Journal Completions
     </header>
     <main>
+        <section id="results">
+            <img src="../assets/certificate-journal.png" alt="open journal with results displayed">
+        </section>
         <section>
             <button id="play-again-button">Play again!</button>
-        </section>
-        <section id="results">
-
         </section>
     </main>
 
