styling on results-page, letters added to journal and nav bar update

--- a/5-certificate-page/index.html
+++ b/5-certificate-page/index.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="./certificate-page.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&family=Rowdies:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&family=Rowdies:wght@700&display=swap"
+        rel="stylesheet">
 
     <title>Certificate Page</title>
 </head>
@@ -21,16 +22,20 @@
     <header>
         My Journal Completions
     </header>
+    <nav>
+        <a href="../1-user-info/index.html">Home</a>
+        <a href="../5-certificate-page/index.html">Results</a>
+        <a href="../6-about-us/index.html">About Us</a>
+    </nav>
     <main>
         <section id="results">
             <img src="../assets/certificate-journal.png" alt="open journal with results displayed">
-        </section>
-        <section>
-            <button id="play-again-button">Play again!</button>
+            <p id="completed-letters">A B C D E</p>
         </section>
     </main>
 
-    <script type="module" src="./certificate.js"></script>
+    <script type=" module" src="./certificate.js">
+                </script>
 </body>
 
 </html>
