Game page working and info is saved to local storage

--- a/3-game-page/index.html
+++ b/3-game-page/index.html
@@ -24,7 +24,8 @@
     <main>
         <section id="background-section">
             <div id="game-prompt">
-                <p id="find-letter-prompt">Find this letter!</p>
+                <p id="description"></p>
+                <p id="find-letter-prompt"></p>
                 <button id="back-button">Back</button>
             </div>
         </section>
