fix certificate js and rename tests

--- a/5-certificate-page/index.html
+++ b/5-certificate-page/index.html
@@ -34,8 +34,7 @@
         </section>
     </main>
 
-    <script type=" module" src="./certificate.js">
-                </script>
+    <script type="module" src="./certificate.js"></script>
 </body>
 
 </html>
