some audio added

--- a/1-user-info/index.html
+++ b/1-user-info/index.html
@@ -51,7 +51,7 @@
                     <button>Submit</button>
                 </div>
             </form>
-
+            <audio id="audio" autoplay></audio>
         </section>
     </main>
 
