--- a/2-choose-adventure/index.html
+++ b/2-choose-adventure/index.html
@@ -28,6 +28,7 @@
         <a href="../6-about-us/index.html">About Us</a>
     </nav>
     <main>
+        <audio id="audio" autoplay></audio>
 
 
     </main>
