--- a/3-game-page/index.html
+++ b/3-game-page/index.html
@@ -25,6 +25,7 @@
         <section id="background-section">
             <div id="game-prompt">
                 <p id="description"></p>
+                <audio id="audio" autoplay></audio>
                 <p id="find-letter-prompt"></p>
                 <button id="back-button">Back</button>
             </div>
