--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
         Welcome, Adventurer!
     </header>
     <main>
+        <audio id="audio">autoplay</audio>
+        
         <a href="./1-user-info/index.html">Click here to begin your journey</a> 
     </main>
+    <script type="module" src="./app.js"></script>
 </body>
 
 </html>
