some audio files working

--- a/5-certificate-page/index.html
+++ b/5-certificate-page/index.html
@@ -30,7 +30,7 @@
     <main>
         <section id="results">
             <img src="../assets/certificate-journal.png" alt="open journal with results displayed">
-
+            <audio id="audio" autoplay></audio>
         </section>
     </main>
 
