--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         Welcome, Adventurer!
     </header>
     <main>
-        <audio id="audio">autoplay</audio>
+        <audio id="audio" autoplay></audio>
         
         <a href="./1-user-info/index.html">Click here to begin your journey</a> 
     </main>
